--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid hero-section p-0 m-0">
       <div class="row">
         <div class="col">
-          <img src="images/image.webp" class="hero-img" alt="hero-img" />
+          <img src="image.webp" class="hero-img" alt="hero-img" />
           <br />
         </div>
       </div>
@@ -121,7 +121,7 @@
     <div class="container-fluid hero-section p-0 m-0">
       <div class="row">
         <div class="col">
-          <img src="images/footer.webp" class="hero-img" alt="hero-img" />
+          <img src="footer.webp" class="hero-img" alt="hero-img" />
           <br />
         </div>
       </div>
