--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <option>DBS Bank India</option>
                     <option>Citibank India</option>
                     <option>HSBC India</option>
+                      <option>Other</option>
                   </select>
                 </div>
                 <div class="form-group">
